2007-08-15  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: GPLv3 updates
	* NEWS: GPLv3 updates
	* README: GPLv3 updates
	* README-cvs: GPLv3 updates
	* THANKS: GPLv3 updates
	* acinclude.m4: GPLv3 updates
	* doc/manual/Makefile.am: GPLv3 updates
	* doc/manual/news.texi: GPLv3 updates
	* src/drivers/sctp.c: GPLv3 updates
	* src/modules/tpiperf.c: GPLv3 updates

2007-08-13  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: GPLv3 header update
	* acinclude.m4: GPLv3 header update
	* configure.ac: GPLv3 header update
	* configure.nexusware: GPLv3 header update
	* strsctp.spec.in: GPLv3 header update
	* debian/copyright: GPLv3 header update
	* debian/mscript_header.in: GPLv3 header update
	* debian/mscript_postinst.in: GPLv3 header update
	* debian/mscript_postrm.in: GPLv3 header update
	* debian/mscript_preinst.in: GPLv3 header update
	* debian/mscript_prerm.in: GPLv3 header update
	* debian/rules.in: GPLv3 header update
	* debian/strsctp-core.postinst.in: GPLv3 header update
	* debian/strsctp-core.postrm.in: GPLv3 header update
	* debian/strsctp-core.preinst.in: GPLv3 header update
	* debian/strsctp-core.prerm.in: GPLv3 header update
	* debian/strsctp-dev.postinst.in: GPLv3 header update
	* debian/strsctp-dev.preinst.in: GPLv3 header update
	* debian/strsctp-dev.prerm.in: GPLv3 header update
	* debian/strsctp-devel.preinst.in: GPLv3 header update
	* debian/strsctp-doc.postinst.in: GPLv3 header update
	* debian/strsctp-doc.preinst.in: GPLv3 header update
	* debian/strsctp-doc.prerm.in: GPLv3 header update
	* debian/strsctp-init.postinst.in: GPLv3 header update
	* debian/strsctp-init.postrm.in: GPLv3 header update
	* debian/strsctp-init.preinst.in: GPLv3 header update
	* debian/strsctp-init.prerm.in: GPLv3 header update
	* debian/strsctp-lib.preinst.in: GPLv3 header update
	* debian/strsctp-source.preinst.in: GPLv3 header update
	* debian/strsctp-util.preinst.in: GPLv3 header update
	* doc/Makefile.am: GPLv3 header update