@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.33 2007/08/15 05:34:31 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.34 2007/10/15 17:24:54 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/08/15 05:34:31 $ by $Author: brian $
+@c Last Modified $Date: 2007/10/15 17:24:54 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -102,6 +102,9 @@ Proper setting of @var{XTI_SNDBUF} and @var{XTI_RCVBUF}.
 
 @item
 License upgrade to GPL Version 3.
+
+@item
+Support for 2.6.22.5-49.fc6 kernel: new sk_buff format.
 
 @end itemize
 
