@@ -1,3 +1,9 @@
+2007-10-15  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: added check for sk_buff.transport_header
+	* src/drivers/sctp2.c: support for new sk_buff format
+	* doc/manual/news.texi: documented 2.6.22 support
+
 2007-08-15  Brian Bidulock  <bidulock@openss7.org>
 
 	* AUTHORS: GPLv3 updates
